--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "react-select": "^5.7.3",
     "web-vitals": "^2.1.4"
   },
-  "homepage": "http://tamaradubik.github.io/weatherApp",
+  "homepage": "http://tamaradubik.github.io/",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
